# diff-drive-nmpc-cpp

./: .gitignore  CMakeLists.txt  README.md  package.xml
ament_env_hooks/: diff_drive_nmpc_cpp.dsv.in
config/: diff_drive.rviz  diff_drive_params.yaml
docs/: acados_nmpc_and_visualization_notes.md  ros2_extension_notes.md
include/: common_types.hpp  controller_base.hpp  csv_logger.hpp  diff_drive_model.hpp  math_utils.hpp  nmpc_controller.hpp  pure_pursuit_controller.hpp  reference_generator.hpp
launch/: controller_only.launch.py  sim_with_rviz.launch.py
prototype/: nmpc_casadi.py
scripts/: generate_acados_solver.py  plot_comparison.py  plot_results.py  run_experiments.py
src/: csv_logger.cpp  diff_drive_model.cpp  main.cpp  nmpc_controller.cpp  pure_pursuit_controller.cpp  reference_generator.cpp
src/ros2/: diff_drive_nmpc_node.cpp  diff_drive_sim_node.cpp
urdf/: diff_drive.urdf
